--- a/parcellab/common/values.yaml
+++ b/parcellab/common/values.yaml
@@ -44,6 +44,15 @@ service:
   protocol: "TCP"
   targetPort: "http"
   type: "ClusterIP"
+  # extraPorts:
+  # - name: https
+  #   port: 443
+  #   targetPort: https
+  #   protocol: TCP
+  # - name: metrics
+  #   port: 9100
+  #   targetPort: metrics
+  #   protocol: TCP
 tolerations: []
 vpa:
   enabled: false
