--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,7 +14,7 @@ jobs:
   matrix:
     runs-on: ubuntu-latest
     outputs:
-      charts: ${{ steps.generate-matrix.outputs.charts }}
+      changed_charts: ${{ steps.changed-charts.outputs.list }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -23,6 +23,12 @@ jobs:
         run: |
           export CHARTS=$(ls -d parcellab/* | awk ' BEGIN { ORS = ""; print "["; } { print "\/\@"$0"\/\@"; } END { print "]"; }' | sed "s^\"^\\\\\"^g;s^\/\@\/\@^\", \"^g;s^\/\@^\"^g")
           echo "::set-output name=charts::$CHARTS"
+      - name: Determine changed charts
+        id: changed-charts
+        run: |
+          CHANGED=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} -- parcellab/ | grep -E 'parcellab/.*/' | awk -F '/' '{print $1"/"$2}' | uniq)
+          CHANGED_JSON=$(echo $CHANGED | jq -R -s -c 'split("\n")[:-1]')
+          echo "::set-output name=list::$CHANGED_JSON"
   test:
     needs: matrix
     runs-on: ubuntu-latest
@@ -46,8 +52,11 @@ jobs:
           files: output.yaml
   release:
     if: github.ref == 'refs/heads/main'
-    needs: test
+    needs: [test, matrix]
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include: ${{fromJson(needs.matrix.outputs.changed_charts)}}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -57,11 +66,11 @@ jobs:
         run: |
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
-      - name: Run chart-releaser library
+      - name: Run chart-releaser for changed charts
+        if: contains(matrix.include, matrix.chart)
         uses: helm/chart-releaser-action@v1.6.0
         with:
-          charts_dir: parcellab
-          charts_repo_url: https://charts.parcellab.dev
+          charts_dir: ${{ matrix.chart }}
           config: cr.yaml
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
