--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,15 +14,16 @@ jobs:
   matrix:
     runs-on: ubuntu-latest
     outputs:
+      charts: ${{ steps.generate-matrix.outputs.charts }}
       changed_charts: ${{ steps.changed-charts.outputs.list }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      # - name: Load repos configuration file
-      #   id: generate-matrix
-      #   run: |
-      #     export CHARTS=$(ls -d parcellab/* | awk ' BEGIN { ORS = ""; print "["; } { print "\/\@"$0"\/\@"; } END { print "]"; }' | sed "s^\"^\\\\\"^g;s^\/\@\/\@^\", \"^g;s^\/\@^\"^g")
-      #     echo "::set-output name=charts::$CHARTS"
+      - name: Load repos configuration file
+        id: generate-matrix
+        run: |
+          export CHARTS=$(ls -d parcellab/* | awk ' BEGIN { ORS = ""; print "["; } { print "\/\@"$0"\/\@"; } END { print "]"; }' | sed "s^\"^\\\\\"^g;s^\/\@\/\@^\", \"^g;s^\/\@^\"^g")
+          echo "::set-output name=charts::$CHARTS"
       - name: Determine changed charts
         id: changed-charts
         run: |
